optional e threads