@@ -13,25 +13,19 @@ public class AppConta {
         testaSacaConta(conta);
         Conta contaSynchronized = new ContaSynchronized();
         testaSacaConta(contaSynchronized);
-        Conta contaAtomic = new ContaAtomic();
-        testaSacaConta(contaAtomic);
 
         Thread.sleep(2000);
         LOGGER.info("conta saldo:" + conta.getSaldo());
         LOGGER.info("contaSynchronized saldo:" + contaSynchronized.getSaldo());
-        LOGGER.info("contaAtomic saldo:" + contaAtomic.getSaldo());
         LOGGER.info("Testa Deposita");
         conta.setSaldo(0);
         contaSynchronized.setSaldo(0);
-        contaAtomic.setSaldo(0);
         
         testaDepositaConta(conta);
         testaDepositaConta(contaSynchronized);
-        testaDepositaConta(contaAtomic);
         Thread.sleep(2000);
         LOGGER.info("conta saldo:" + conta.getSaldo());
         LOGGER.info("contaSynchronized saldo:" + contaSynchronized.getSaldo());
-        LOGGER.info("contaAtomic saldo:" + contaAtomic.getSaldo());
     }
 
     private static void testaSacaConta(Conta conta) {
@@ -44,9 +38,9 @@ public class AppConta {
     }
     private static void testaDepositaConta(Conta conta) {
         IntStream.rangeClosed(1, 1000000).forEach(i -> {
-            new Thread(() -> {
+            Thread.startVirtualThread(() -> {
                 conta.deposita(100);
-            }).start();            
+            });
         });
     }
 }
